@@ -77,6 +77,9 @@ Version 9  Live Server Fixes
   active robbery work and not as an infinite space to keep tools safe from
   other robbers.
 
+--Backpacks only added to a houses vault on death or vault reach.  They are
+  dumped in the street (totally lost) if the robber leaves the house.
+
 
 
 
